# mokumoku-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  slack_app_manifest.yaml  template.yaml
src/: main.py
