[project]
name = "mokumoku-bot"
version = "0.1.0"
description = "定期的にoViceからユーザの状態を取得し入退室状況をSlackに通知するボット"
authors = [
    { name = "kouji_nakamura", email = "41434466+7crabs@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[tool.ruff.lint]
# Copied from https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

# Disable rules that conflict with format
# ref. https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["E111", "E114", "E117"]

